--- a/app/templates/tournament_header.html
+++ b/app/templates/tournament_header.html
@@ -45,10 +45,9 @@
         </td>
       </tr>
     </table>
-
   </header>
 
-  <!-- Table for Placements -->
+  <!-- Table for Brackets -->
   <div class="panel panel-default">
   <div class="panel-heading">
     <h1><b>Brackets</b></h1>
