--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -2,7 +2,7 @@
 <tr>
   <th class="text-center"><h4><b>User</b></h4></th>
 	<th class="text-center"><h4><b>Region</b></h4></th>
-	<th class="text-center"><h4><b>Main</b></h4></th>
+	<th class="text-center"><h4><b>Chars</b></h4></th>
 	<!-- Disable form to select sort by Main
 	{% if form %}
 		<form class="navbar-form" action="{{url_for('browse_users')}}" name="CharacterFilter">
