--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -1,6 +1,7 @@
 <!-- user_display table header (table column titles) -->
 <tr>
-  <th class="text-center"><h4><b>User</b></h4></th>
+	<th class="text-center"><h4><b>Rank</b></h4></th>
+	<th class="text-center"><h4><b>User</b></h4></th>
 	<th class="text-center"><h4><b>Region</b></h4></th>
 	<th class="text-center"><h4><b>Chars</b></h4></th>
 	<!-- Disable form to select sort by Main
