--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -32,16 +32,30 @@
       </td>
     </tr>
 
-      <tr>
-        <td>
-          <h3><b>{{user.trueskills[0].region}} Rating:</b> {{user.trueskills[0].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[0].sigma|round(4, 'common')}}--> </h3>
-        </td>
+    <tr>
+      <td>
+        <h3><b>{{user.trueskills[0].region}} Rating:</b> {{user.trueskills[0].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[0].sigma|round(4, 'common')}}--> </h3>
+      </td>
 
-        {% if user.trueskills[1] %}
-          <td>
-            <h3><b>{{user.trueskills[1].region}} Rating:</b> {{user.trueskills[1].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[1].sigma|round(4, 'common')}}--> </h3>
-          </td>
-        {% endif %}
+      {% if user.trueskills[1] %}
+        <td>
+          <h3><b>{{user.trueskills[1].region}} Rating:</b> {{user.trueskills[1].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[1].sigma|round(4, 'common')}}--> </h3>
+        </td>
+      {% endif %}
+    </tr>
+
+    <tr>
+      <td>
+        <h3><b>{{user.trueskills[0].region}} Rank:</b> {{user.trueskills[0].rank}} <!-- , σ: {{user.trueskills[0].sigma|round(4, 'common')}}--> </h3>
+      </td>
+
+      {% if user.trueskills[1] %}
+        <td>
+          <h3><b>{{user.trueskills[1].region}} Rank:</b> {{user.trueskills[1].rank}} <!-- , σ: {{user.trueskills[1].sigma|round(4, 'common')}}--> </h3>
+        </td>
+      {% endif %}
+      </tr>
+
     </table>
 
     <!-- Route to edit User; Not available in version 2.0 -->
