--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -2,6 +2,10 @@
 
 {% if user %}
 <tr>
+    <td class="col-sm-1 text-center mobile-horizontal-overflow-td-col-3 horizontal-overflow">
+        <b>{{rank}}</b>
+    </td>
+
     <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3 horizontal-overflow">
         <a href="{{url_for("user", tag=user.tag)}}"><b>{{user.tag}}</b></a>
     </td>
@@ -28,7 +32,7 @@
         {% endif %}
     </td>
 
-    <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3">
+    <td class="col-sm-2 text-center mobile-horizontal-overflow-td-col-3">
         {% if user.trueskills %}
             {% if current_region=="Global" or current_region=="National" %}
                 {{user.trueskills[0].cons_mu|round(4, 'common')}}
