--- a/app/templates/tournament_header_display_titles.html
+++ b/app/templates/tournament_header_display_titles.html
@@ -1,7 +1,7 @@
 <!-- tournament_display columns (tournament table column titles) -->
 <tr>
-	<th class="text-center "><h4><b>Date</h4></b></th>
-	<th class="text-center"><h4><b>Name</b></h4></th>
-	<th class="text-center"><h4><b>Entrants</b></h4></th>
-	<th class="text-center"><h4><b>Region</b></h4></th>
+	<th><h4><b>Date</h4></b></th>
+	<th><h4><b>Name</b></h4></th>
+	<th><h4><b>Entrants</b></h4></th>
+	<th><h4><b>Region</b></h4></th>
 </tr>
