--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -1,9 +1,9 @@
 <!-- user_display table header (table column titles) -->
 <tr>
 	<th class="text-center"><h4><b>Rank</b></h4></th>
-	<th class="text-center"><h4><b>User</b></h4></th>
-	<th class="text-center"><h4><b>Region</b></h4></th>
-	<th class="text-center"><h4><b>Chars</b></h4></th>
+	<th><h4><b>User</b></h4></th>
+	<th><h4><b>Region</b></h4></th>
+	<th><h4><b>Chars</b></h4></th>
 	<!-- Disable form to select sort by Main
 	{% if form %}
 		<form class="navbar-form" action="{{url_for('browse_users')}}" name="CharacterFilter">
@@ -13,6 +13,6 @@
   	<h4><b>Main<b></h4>
 	{% endif %}
 	-->
-	<th class="text-center"><h4><b>Rating</b><h4></th>
+	<th><h4><b>Rating</b><h4></th>
 	<!-- <th><h4><b>Secondaries</b></h4></th> -->
 </tr>
