--- a/app/templates/tournament_display.html
+++ b/app/templates/tournament_display.html
@@ -2,7 +2,7 @@
 
 {% if tournament.name != "Non-Tourney" %}
 <tr>
-	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3 text-center"><b>
+	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3"><b>
 	{% if tournament.date.year==2099 %}
 		20XX
 	{% else %}
@@ -10,11 +10,11 @@
 	{% endif %}
 	</b></td>
 
-	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3 text-center">
+	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3">
 		<a href="{{url_for('tournament', tournament_header=tournament.header.name, sub_tournament=tournament.name)}}"><b>{{tournament.name}}</a></b>
 	</td>
 	
-	<td class="col-sm-3 text-center"><b>
+	<td class="col-sm-3"><b>
 		{% if tournament.entrants > 0 %}
 			{{tournament.entrants}}
 		{% else %}
@@ -22,7 +22,7 @@
 		{% endif %}
 	</b></td>
 
-	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3 text-center">
+	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3">
 		{% if tournament.region %}
 			<b><a href="{{url_for("region", region=tournament.region)}}">{{tournament.region}}</a></b>
 		{% else %}
