--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
   <header class="jumbotron">
     <h1>Welcome to SmashStats!</h1>
     <p>
-      Smashstats tracks the stats of tournament-level players in the Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents selected statistics of tournament attendance, set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
+      Smashstats tracks the tournament performances of Super Smash Bros. Melee players of all levels. The web app parses data from tournament brackets and presents selected statistics of tournament attendance, set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
     </p>
   </header>
 
@@ -16,17 +16,8 @@
   	<div class="caption scroll400">
 	  	<h4><b>Recent Updates</b></h4>
 	  	<ul>
-        <b>September 4, 2015</b>
-        <li>The database will be updated weekly, overnight on Wednesdays. All tournament brackets in the queue will be uploaded, as well as changes to player information.</li>
-        <br>
-
-        <b>August 22, 2015</b>
-        <li>Regions SoCal, North Carolina added!</li>
-        <br>
-
-	  		<b>August 11, 2015</b>
-	  		<li>Sets between players of the same region no longer updates global TrueSkill rating.</li>
-	  		<li>Number of sets played is a bigger factor in determining TrueSkill rating.</li>
+        <b>May 12, 2016</b>
+        <li>SmashStats v2.7 is here! Read more about it <b><a href="https://medium.com/smashstats/smashstats-2-7-f46741640a66#.z6ysxlwks">here</a><b></li>
 	  	</ul>
   	</div>
   </div>
