changed metadata url to smashstats.io

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
     <!-- Facebook meta tags for 'like' button -->
     <meta property="og:title" content="SmashStats">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://smashstats.herokuapp.com/">
+    <meta property="og:url" content="http://smashstats.io/">
     <meta property="og:site_name" content="SmashStats">
     <meta property="fb:app_id" content="1587149311552603">
 
