--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -96,7 +96,7 @@
     {% set has_next_page = user_tournaments_sorted|length / tournaments_per_page > page %}
     <div class="text-center"><b>
       {% if has_prev_page %}
-        <a href="{{ url_for('user', tag=user.tag, page=prev_page) }}">&lt;&lt; Less Tournaments</a>
+        <a href="{{ url_for('user', tag=user.tag, page=prev_page) }}">&lt;&lt; Newer Tournaments</a>
       {% endif %}
 
       {% if has_prev_page and has_next_page %}
@@ -104,7 +104,7 @@
       {% endif %}
 
       {% if has_next_page %}
-        <a href="{{ url_for('user', tag=user.tag, page=next_page) }}">More Tournaments &gt;&gt;</a>
+        <a href="{{ url_for('user', tag=user.tag, page=next_page) }}">Older Tournaments &gt;&gt;</a>
       {% endif %}
     </b></div>
   </div>
@@ -149,7 +149,7 @@
     <!-- Navigating pages -->
     <div class="text-center"><b>
       {% if has_prev_page %}
-        <a href="{{ url_for('user', tag=user.tag, page=prev_page) }}">&lt;&lt; Less Sets</a>
+        <a href="{{ url_for('user', tag=user.tag, page=prev_page) }}">&lt;&lt; Newer Sets</a>
       {% endif %}
 
       {% if has_prev_page and has_next_page %}
@@ -157,7 +157,7 @@
       {% endif %}
 
       {% if has_next_page %}
-        <a href="{{ url_for('user', tag=user.tag, page=next_page) }}">More Sets &gt;&gt;</a>
+        <a href="{{ url_for('user', tag=user.tag, page=next_page) }}">Older Sets &gt;&gt;</a>
       {% endif %}
     </b></div>
   </div>
