--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -4,6 +4,8 @@
 	<th><h4><b>User</b></h4></th>
 	<th><h4><b>Region</b></h4></th>
 	<th><h4><b>Chars</b></h4></th>
+	<th><h4><b>Rating (μ)</b></h4></th>
+	<th><h4><b>Deviation (σ)</b></h4></th>
 	<!-- Disable form to select sort by Main
 	{% if form %}
 		<form class="navbar-form" action="{{url_for('browse_users')}}" name="CharacterFilter">
@@ -13,6 +15,6 @@
   	<h4><b>Main<b></h4>
 	{% endif %}
 	-->
-	<th><h4><b>Rating</b><h4></th>
+	
 	<!-- <th><h4><b>Secondaries</b></h4></th> -->
 </tr>
