added cons_mu, mu, sigma to user display

--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -4,7 +4,8 @@
 	<th><h4><b>User</b></h4></th>
 	<th><h4><b>Region</b></h4></th>
 	<th><h4><b>Chars</b></h4></th>
-	<th><h4><b>Rating (μ)</b></h4></th>
+	<th><h4><b>Rating (μ-σ)</b></h4></th>
+	<th><h4><b>Mu (μ)</b></h4></th>
 	<th><h4><b>Deviation (σ)</b></h4></th>
 	<!-- Disable form to select sort by Main
 	{% if form %}
